--- a/index.html
+++ b/index.html
@@ -1,48 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Dracula's blog</title>
-
-  <link rel="stylesheet" href="styles/bootstrap.css">
-  <script src="js/jquery-1.11.1.js"></script>
-  <script src="js/scripts.js"></script>
+  <script src="libs/jquery-1.11.1.js"></script>
+  <script src="libs/handlebars-v1.3.0.js"></script>
+  <script src="libs/ember.js"></script>
+  <script src="libs/ember-handlebars-loader-0.0.1.js"></script>
+  <script src="blogger.js"></script>
+  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
+
 <body>
 
-  <div class='container'>
-    <nav class='navbar navbar-default' role='navigation'>
-      <ul class='nav navbar-nav'>
-        <li><a href='#'>Posts</a></li>
-        <li><a href='#'>Recent comments</a></li>
-        <li><a href='#'>About</a></li>
-        <li><a href='#'>Contact</a></li>
-      </ul>
-    </nav>
-
-    <h1></h1>
-
-    <div id='view'>
-      <p></p>
-
-      <button class="btn btn-primary" id='start-editing'>Edit</button>
-    </div>
-
-
-    <div id='edit' style='display:none'>
-      <form>
-        <div class="form-group">
-          <label for="title">Title</label>
-          <input id="title" class="form-control">
-        </div>
-
-        <div class="form-group">
-          <label for="body">Body</label>
-          <textarea id="body" class="form-control" rows="15"></textarea>
-        </div>
-
-        <button type="submit" class="btn btn-primary">Save</button>
-      </form>
-    </div>
-  </div>
 </body>
 </html>
