display contact info

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <script src="libs/ember.js"></script>
   <script src="libs/ember-handlebars-loader-0.0.1.js"></script>
   <script src="blogger.js"></script>
+  <script src="router.js"></script>
+  <script>
+    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email']);
+  </script>
   <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
