--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <script src="blogger.js"></script>
   <script src="router.js"></script>
   <script>
-    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email']);
+    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application']);
   </script>
   <link rel="stylesheet" href="css/bootstrap.css">
 </head>
