--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <script src="libs/ember-handlebars-loader-0.0.1.js"></script>
   <script src="blogger.js"></script>
   <script src="router.js"></script>
+  <script src="controllers/about.js"></script>
+  <script src="controllers/contact.js"></script>
   <script>
     EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application']);
   </script>
