--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <title>Dracula's blog</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
   <script src="libs/jquery-1.11.1.js"></script>
   <script src="libs/handlebars-v1.3.0.js"></script>
   <script src="libs/ember.js"></script>
@@ -11,10 +12,13 @@
   <script src="router.js"></script>
   <script src="controllers/about.js"></script>
   <script src="controllers/contact.js"></script>
+  <script src="libs/store.js"></script>
+  <script src="routes/posts.js"></script>
+  <script src="routes/recent-comments.js"></script>
+  <script src="routes/post.js"></script>
   <script>
-    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application']);
+    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post']);
   </script>
-  <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
 <body>
