allow a user to edit a blog post

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="router.js"></script>
   <script src="controllers/about.js"></script>
   <script src="controllers/contact.js"></script>
+  <script src="controllers/post.js"></script>
   <script src="libs/store.js"></script>
   <script src="routes/posts.js"></script>
   <script src="routes/recent-comments.js"></script>
