--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <script src="controllers/about.js"></script>
   <script src="controllers/contact.js"></script>
   <script src="controllers/post.js"></script>
+  <script src="controllers/posts.js"></script>
   <script src="libs/store.js"></script>
   <script src="routes/posts.js"></script>
   <script src="routes/recent-comments.js"></script>
