--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script src="controllers/post.js"></script>
   <script src="controllers/posts.js"></script>
   <script src="controllers/new-post.js"></script>
+  <script src="controllers/new-comment.js"></script>
   <script src="libs/store.js"></script>
   <script src="routes/posts.js"></script>
   <script src="routes/recent-comments.js"></script>
@@ -24,7 +25,7 @@
   <script src="models/post.js"></script>
   <script src="models/comment.js"></script>
   <script>
-    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post', 'new-post']);
+    EmberHandlebarsLoader.loadTemplates(['posts', 'about', 'contact', 'phone', 'email', 'application', 'recent-comments', 'post', 'new-post', 'new-comment']);
   </script>
 </head>
 
